--- a/html/index.html
+++ b/html/index.html
@@ -10,15 +10,9 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDusgVbcYaUqaWD6-ORU2vHgE3mqwkKamA&sensor=false">
     </script>
+    <script type="text/javascript" src="javascript/route-finder.js">
+    </script>
     <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644),
-          zoom: 8
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
-      }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
