--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,25 @@
     <script type="text/javascript">
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
+      #route-finder {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
+    </style>
   </head>
-  <form id="route-finder">
+  <div id="route-finder">
   	<h2>Welcome to Route-finder. Please type in the addresses in the fileds provided.</h2>
 	<br/>
 	<br/>
@@ -21,8 +38,8 @@
 	Destination address(es) : <br/>
 	<textarea rows="5" cols="50" id="destaddr" placeholder="Enter the address of subsequent places of interest one per line" required ></textarea>
 	<br/>
-	<button type="submit" id="submit" formaction="validate.js">Submit</button>
-  </form>
+	<button type="submit" id="submit" onclick="calcRoute();">Submit</button>
+  </div>
   <body>
     <div id="map-canvas"/>
   </body>
