--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- TODO(ajay): Add in CSS: link rel="stylesheet" type="text/css" href="styles.css"-->
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDusgVbcYaUqaWD6-ORU2vHgE3mqwkKamA&sensor=false">
     </script>
