--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDusgVbcYaUqaWD6-ORU2vHgE3mqwkKamA&sensor=false">
     </script>
-    <script type="text/javascript" src="javascript/route-finder.js">
+    <script type="text/javascript" src="static/javascript/route-finder.js">
     </script>
     <script type="text/javascript">
       google.maps.event.addDomListener(window, 'load', initialize);
