--- a/html/index.html
+++ b/html/index.html
@@ -13,18 +13,19 @@
     </script>
   </head>
   <div id="route-finder">
-  	<h2>Welcome to Route-finder. Please type in the addresses in the fields provided.</h2>
-	<br/>
-	<br/>
-	<b>Starting address: </b> <input type="text" id="startaddr" placeholder="Enter the starting address" autofocus required />
-	<br/>
-	<br/>
-	<b>Destination(s) : </b>
-	<textarea rows="5" cols="50" id="destaddr" placeholder="Enter the address of subsequent places of interest one per line" required ></textarea>
-	<br/>
-	<br/>
-	<input type="checkbox" id="return" value="return"><b>Return back to starting address<b><br>
-	<button type="submit" id="submit" onclick="calcRoute();">Submit</button>
+	<div id="content">
+	  	<h2>Welcome to Route-finder. Please type in the addresses in the fields provided.</h2>
+		<br/><br/>
+		<b>Starting address: </b> 
+		<input type="text" id="startaddr" placeholder="Enter the starting address" autofocus required />
+		<br/><br/>
+		<b>Destination(s) : </b>
+		<textarea rows="5" cols="50" id="destaddr" placeholder="Enter the address of subsequent places of interest one per line" required ></textarea>
+		<br/><br/>
+		<input type="checkbox" id="return" checked="true"><b>Return back to starting address<b>
+		<br/><br/>
+		<button type="submit" id="submit" onclick="calcRoute();">Submit</button>
+	</div>
   </div>
   <body>
     <div id="map-canvas"/>
