Added text area for route directions

--- a/html/index.html
+++ b/html/index.html
@@ -32,4 +32,9 @@
   <body>
     <div id="map-canvas"/>
   </body>
+  <div id="computed-route">
+	<b>Computed route: </b>
+	<br/>
+	<textarea rows="5" cols="50" id="dest" ></textarea>
+  </div>
 </html>
