In index.html API key is now templated. Two keys provided in website/views.py

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDusgVbcYaUqaWD6-ORU2vHgE3mqwkKamA&sensor=false">
+      src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}&sensor=false">
     </script>
     <script type="text/javascript" src="static/javascript/route-finder.js">
     </script>
