--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,10 @@
 		<button type="submit" id="submit" onclick="calcRoute();">Submit</button>
 		<button type="button" id="reset" onclick="reset();">Reset</button>
 		<br/>
+        <div id="progress-bar">
+            <b>Progress</b> : <progress id="progress" value="10" max="100">
+            </progress>
+        </div>
 		<div id="computed-route">
 			<b>Directions for the computed route: </b>
 			<br/>		
