--- a/html/index.html
+++ b/html/index.html
@@ -38,6 +38,9 @@
             <b>Progress</b> : <progress id="progress" value="10" max="100">
             </progress>
         </div>
+        <div id="error">
+            <label id="error-msg"></label>
+        </div>
 		<div id="computed-route">
 			<b>Directions for the computed route: </b>
 			<br/>		
